# gx

./: .cursorrules  .otto.yml  Cargo.toml  README.md  build.rs  gx.yml  rustfmt.toml  successive-test.md  successive-test.md.backup  test-temp.md  test_width_comparison.rs
.github/workflows/: binary-release.yml  ci.yml
.pais/: SKILL.md
catalog/: Cargo.toml
catalog/src/: db.rs  lib.rs  tools.rs  walk.rs
catalog/src/db/: tests.rs
catalog/src/tools/: deps.rs  query.rs  read.rs  search.rs  tests.rs
catalog/src/walk/: tests.rs
docs/: architecture.md  bug-review-ls-not-finding-prs.md  cli-design.md  clone-feature.md  configuration.md  fix-remote-status-detection.md  gx-clone-ssh-migration-plan.md  gx-evaluation-2025-01.md  gx-issues-implementation-plan.md  gx-rollback-enhancement-implementation.md  gx-status-implementation.md  how-to-execute-a-plan.md  implementation-status.md  issue-6-branch-detection-consistency-spec.md  remote-status-redesign-plan.md  shakedown-llm-mcp.md  shakedown-v0.4.0.md  shakedown-v0.5.0.md  shakedown-v0.6.1.md  slam-comparison-analysis.md  slam-create-parity-implementation.md  slam-integration-plan.md  stephen-issues-2-4-implementation-plan.md  stephen-issues-2-6-implementation-plan.md  streaming-status-with-alignment.md  subcommand-refactoring-plan.md  subcommands.md  terminal-width-detection.md  testing-infrastructure.md  testing.md  unicode-emoji-width-in-rust.md  user-org-consistency-design.md
docs/design/: 2026-06-11-workflow-safety-hardening-implementation-notes.md  2026-06-11-workflow-safety-hardening.md  2026-07-04-gx-status-layout-indicator-implementation-notes.md  2026-07-04-gx-status-layout-indicator.md  2026-07-11-rollback-undo-hardening-implementation-notes.md  2026-07-11-rollback-undo-hardening.md  2026-07-12-gx-production-hardening-implementation-notes.md  2026-07-12-gx-production-hardening.md  2026-07-12-llm-propose-apply-and-mcp-server-implementation-notes.md  2026-07-12-llm-propose-apply-and-mcp-server.md  2026-07-12-persona-aware-github-auth-implementation-notes.md  2026-07-12-persona-aware-github-auth.md  2026-07-13-gx-shakedown-fixes-implementation-notes.md  2026-07-13-gx-shakedown-fixes.md  2026-07-17-gx-intel-catalog-implementation-notes.md  2026-07-17-gx-intel-catalog.md  2026-07-17-gx-lib-decomposition-implementation-notes.md  2026-07-17-gx-lib-decomposition.md  2026-07-17-gx-onto-mcp-io-implementation-notes.md  2026-07-17-gx-onto-mcp-io.md
gx-mcp/: Cargo.toml  README.md
gx-mcp/src/: gate.rs  logic.rs  main.rs  schema.rs  server.rs
gx-mcp/src/gate/: tests.rs
gx-mcp/tests/: e2e_campaign_test.rs  mcp_handshake_test.rs  mcp_tools_test.rs
gx/docs/: remote-status-feature.md
local/: Cargo.toml
local/src/: config.rs  diff.rs  file.rs  git.rs  hash.rs  lib.rs  repo.rs  test_utils.rs
local/src/bare/: tests.rs
local/src/config/: tests.rs
local/src/file/: tests.rs
local/src/subprocess/: tests.rs
remote/: Cargo.toml  build.rs
remote/src/: app.rs  catalog.rs  checkout.rs  cleanup.rs  cli.rs  confirm.rs  crash.rs  doctor.rs  lib.rs  lock.rs  output.rs  persona.rs  rollback.rs  ssh.rs  state.rs
remote/src/catalog/: tests.rs
remote/src/crash/: tests.rs
remote/src/create/: core.rs  tests.rs
remote/src/create/core/: apply.rs  propose.rs
remote/src/create/core/manifest/: tests.rs
remote/src/doctor/: tests.rs
remote/src/github/: tests.rs
remote/src/mcp/: gate.rs  logic.rs  schema.rs  server.rs
remote/src/mcp/gate/: tests.rs
remote/src/persona/: tests.rs
remote/src/rollback/: core.rs
remote/src/rollback/core/: tests.rs
remote/src/undo/: core.rs
remote/src/undo/core/: tests.rs
remote/tests/: build_script_test.rs
src/: bare.rs  checkout.rs  cleanup.rs  cli.rs  clone.rs  config.rs  confirm.rs  create.rs  diff.rs  doctor.rs  file.rs  git.rs  github.rs  lib.rs  lock.rs  main.rs  mcp.rs  output.rs  persona.rs  repo.rs  review.rs  rollback.rs  ssh.rs  state.rs  status.rs  subprocess.rs  test_utils.rs  transaction.rs  undo.rs  user_org.rs  utils.rs
src/config/: tests.rs
src/confirm/: tests.rs
src/crash/: tests.rs
src/create/: core.rs  tests.rs
src/create/core/: apply.rs  manifest.rs  propose.rs  tests.rs
src/create/core/apply/: tests.rs
src/create/core/manifest/: tests.rs
src/create/core/propose/: tests.rs
src/doctor/: tests.rs
src/file/: tests.rs
src/github/: tests.rs
src/hash/: tests.rs
src/lock/: tests.rs
src/mcp/: gate.rs  logic.rs  server.rs
src/mcp/gate/: tests.rs
src/persona/: tests.rs
src/rollback/: core.rs
src/rollback/core/: tests.rs
src/transaction/: tests.rs
src/undo/: core.rs  tests.rs
src/undo/core/: tests.rs
tests/: alignment_test.rs  bare_layout_test.rs  branch_detection_consistency_test.rs  build_script_test.rs  checkout_tests.rs  comprehensive_tests.rs  config_remote_status_tests.rs  e2e_campaign_test.rs  e2e_crash_injection.rs  e2e_create_lifecycle.rs  e2e_f12_failclosed.rs  e2e_llm_apply.rs  e2e_llm_cli.rs  e2e_llm_matrix.rs  e2e_reporting.rs  e2e_undo_lifecycle.rs  integration_tests.rs  lock_contention_test.rs  mcp_handshake_test.rs  mcp_tools_test.rs  remote_status_tests.rs  ssh_integration_tests.rs  status_tests.rs  unified_formatting_tests.rs
tests/fixtures/: gx-testing-config.yml
