[workspace]
members = ["gx-mcp"]
# The gx package below is the workspace root package; `cargo run`/`cargo build`/
# `cargo install --path .` at the repo root must keep building the gx bin, not
# the whole workspace, so the default working set is just the root package.
default-members = ["."]

[workspace.package]
version = "0.6.3"

[package]
name = "gx"
version.workspace = true
edition = "2021"
# `std::fs::File::try_lock` (used by src/lock.rs) is stable since Rust 1.89.
rust-version = "1.89"
build = "build.rs"

[[bin]]
name = "gx"
path = "src/main.rs"

[lib]
name = "gx"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
glob = "0.3.3"
log = "0.4.28"
num_cpus = "1.17"
rayon = "1.11"
regex = "1.11.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
similar = "2.7.0"
tempfile = "3.22"
unicode-display-width = "0.3"
walkdir = "2.5"
# Using std::process::Command for git calls like slam

[dev-dependencies]

[build-dependencies]
# For build.rs if needed
