[workspace]
# gx is the sole member (the workspace root package); the MCP server is now the
# `gx mcp` subcommand (embedded via mcp-io), not a separate `gx-mcp` crate.
members = []
# `cargo run`/`cargo build`/`cargo install --path .` at the repo root build the
# gx bin, which is what the default working set must stay pointed at.
default-members = ["."]

[workspace.package]
version = "0.6.3"

[package]
name = "gx"
version.workspace = true
edition = "2021"
# `std::fs::File::try_lock` (used by src/lock.rs) is stable since Rust 1.89.
rust-version = "1.89"
build = "build.rs"

[[bin]]
name = "gx"
path = "src/main.rs"

[lib]
name = "gx"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
glob = "0.3.3"
log = "0.4.28"
mcp-io = { git = "https://github.com/tatari-tv/mcp-io-rs", tag = "v0.2.0", version = "0.2.0" }
num_cpus = "1.17"
rayon = "1.11"
regex = "1.11.2"
rmcp = { version = "2.2", features = ["server", "macros"] }
schemars = "1.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
similar = "2.7.0"
tempfile = "3.22"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros"] }
unicode-display-width = "0.3"
walkdir = "2.5"
# Using std::process::Command for git calls like slam

[dev-dependencies]

[build-dependencies]
# For build.rs if needed
