[workspace]
# `gx` (bin only, Track B0 Phase 3) is the workspace root package; `local` is
# the credential-free lib crate (Phase 1/2) and `remote` is the
# credential-bound lib crate (Phase 3) that owns every command module and
# depends on `local`. The MCP server is the `gx mcp` subcommand (embedded via
# mcp-io, living in `remote::mcp`), not a separate `gx-mcp` crate. `catalog`
# (Track B1, gx-intel-catalog design doc) is a THIRD lib crate depending on
# `local` only -- never `remote` -- so the cross-org intel/operations boundary
# is compiler-structural, not conventional.
members = ["local", "remote", "catalog"]
# `cargo run`/`cargo build`/`cargo install --path .` at the repo root build the
# gx bin, which is what the default working set must stay pointed at.
default-members = ["."]

[workspace.package]
version = "0.7.0"

[package]
name = "gx"
version.workspace = true
edition = "2021"
# `std::fs::File::try_lock` (used by remote/src/lock.rs) is stable since Rust 1.89.
rust-version = "1.89"

[[bin]]
name = "gx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
eyre = "0.6.12"
local = { path = "local" }
log = "0.4.28"
mcp-io = { git = "https://github.com/tatari-tv/mcp-io-rs", tag = "v0.2.0", version = "0.2.0" }
remote = { path = "remote" }

[dev-dependencies]
local = { path = "local", features = ["testutil"] }
remote = { path = "remote" }
serde_json = "1.0"
serde_yaml = "0.9.34"
tempfile = "3.22"
