[package]
name = "catalog"
version.workspace = true
edition = "2021"

[dependencies]
eyre = "0.6.12"
local = { path = "../local" }
log = "0.4.28"
rayon = "1.12.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.3"

[dev-dependencies]
local = { path = "../local", features = ["testutil"] }
tempfile = "3.22"
