[package]
name = "gx-mcp"
version.workspace = true
edition = "2021"
rust-version = "1.89"

[[bin]]
name = "gx-mcp"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.11"
eyre = "0.6.12"
gx = { version = "0.4.1", path = ".." }
log = "0.4.33"
rmcp = { version = "2.2.0", features = ["server", "macros"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
